# medicalAssistant

./: .gitignore  README.md  main.py  pyproject.toml
db/: database.py  models.py
frontend/: .env.production  .gitignore  index.html  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AudioRecorder.jsx  DischargePreview.jsx  SuggestionCard.jsx  TranscriptPanel.jsx
frontend/src/pages/: Dashboard.jsx  SessionHistory.jsx
knowledge_base/: ingest.py
knowledge_base/chroma_store/: chroma.sqlite3
routers/: audio.py  feedback.py  rag.py  sessions.py
services/: discharge_service.py  export_service.py  rag_service.py
